# duckdb-prql

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake
.github/workflows/: Linux.yml  MacOS.yml  MainDistributionPipeline.yml  WASM.yml  Windows.yml  _extension_deploy.yml
scripts/: extension-upload.sh
src/: prql_extension.cpp
src/include/: prql_extension.hpp
test/sql/: prql.test
